--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <h3>
 <a name="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante"><span class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
 
-<p>1) A. Sgattoni, S. Sinigardi, L. Stefano, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, submitted to Appl. Phys. Lett.</p>
+<p>1) A. Sgattoni, S. Sinigardi, L. Stefano, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, submitted to Phys. Rev. Lett.</p>
 
-<p>2) A. Sgattoni, S. Sinigardi, A. Macchi,  High Energy Gain in Three-Dimensional Simulations of Light Sail Acceleration, <a href="http://arxiv.org/pdf/1403.2709.pdf">arXiv:1403.2709</a>, submitted to Phys. Rev. Lett. </p>
+<p>2) A. Sgattoni, S. Sinigardi, A. Macchi,  High Energy Gain in Three-Dimensional Simulations of Light Sail Acceleration, <a href="http://arxiv.org/pdf/1403.2709.pdf">arXiv:1403.2709</a>, submitted to Appl. Phys. Lett.</p>
       </section>
     </div>
 
@@ -65,7 +65,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
