Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="piccante : " />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="piccante : a spicy massively parallel fully-relativistic electromagnetic 3D particle-in-cell code ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/ALaDyn/piccante">View on GitHub</a>
 
           <h1 id="project_title">piccante</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">a spicy massively parallel fully-relativistic electromagnetic 3D particle-in-cell code </h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ALaDyn/piccante/zipball/master">Download this project as a .zip file</a>
@@ -31,8 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="piccante" class="anchor" href="#piccante"><span class="octicon octicon-link"></span></a>piccante</h1>
+        <p><a href="https://travis-ci.org/ALaDyn/piccante" title="master"><img src="https://travis-ci.org/ALaDyn/piccante.png?branch=master" alt="Build Status Master"></a></p>
 
 <p><code>piccante</code> is a massively parallel fully-relativistic electromagnetic 3D particle-in-cell code, released by the authors to the whole laser-plasma community under a GPLv3 license.</p>
 
@@ -42,14 +41,17 @@
 
 <p>In its present state, the code could be considered in <em>beta status</em>.</p>
 
-<p>Copyright 2014 - Andrea Sgattoni, Luca Fedeli, Stefano Sinigardi</p>
+<p>Copyright 2014, 2015 - Andrea Sgattoni, Luca Fedeli, Stefano Sinigardi</p>
 
 <p>A paper that describes the technical features of <code>piccante</code> is under development now, in the meantime if you want to use the code please ask the authors for a ZENODO doi linked to the release you're using.</p>
 
-<h3>
-<a name="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante"><span class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
+<p>A technical paper describing optimizations performed during a Preparatory PRACE can be found <a href="http://www.prace-ri.eu/IMG/pdf/WP209.pdf">here</a> <a href="http://dx.doi.org/10.5281/zenodo.16097"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.16097.svg" alt="DOI"></a>.</p>
 
-<p>1) A. Sgattoni, S. Sinigardi, L. Fedeli, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, submitted to Phys. Rev. Lett.</p>
+<h3>
+<a id="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
+
+<p>1) A. Sgattoni, S. Sinigardi, L. Fedeli, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, submitted to Phys. Rev. Lett.
+<a href="http://dx.doi.org/10.5281/zenodo.10587"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.10587.svg" alt="DOI"></a></p>
 
 <p>2) A. Sgattoni, S. Sinigardi, A. Macchi,  High Energy Gain in Three-Dimensional Simulations of Light Sail Acceleration, <a href="http://arxiv.org/pdf/1403.2709.pdf">arXiv:1403.2709</a>, submitted to Appl. Phys. Lett.</p>
       </section>
@@ -58,14 +60,12 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-<!--
         <p class="copyright">piccante maintained by <a href="https://github.com/ALaDyn">ALaDyn</a></p>
--->
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
-
+    
 
   </body>
 </html>
