Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <h3>
 <a id="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
 
-<p>1) A. Sgattoni, S. Sinigardi, L. Fedeli, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, submitted to Phys. Rev. Lett.
+<p>1) A. Sgattoni, S. Sinigardi, L. Fedeli, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, <a href="http://dx.doi.org/10.1103/PhysRevE.91.013106">Phys. Rev. E, 91, 013106 (2015)</a>
 <a href="http://dx.doi.org/10.5281/zenodo.10587"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.10587.svg" alt="DOI"></a></p>
 
-<p>2) A. Sgattoni, S. Sinigardi, A. Macchi,  High Energy Gain in Three-Dimensional Simulations of Light Sail Acceleration, <a href="http://arxiv.org/pdf/1403.2709.pdf">arXiv:1403.2709</a>, submitted to Appl. Phys. Lett.</p>
+<p>2) A. Sgattoni, S. Sinigardi, A. Macchi,  High Energy Gain in Three-Dimensional Simulations of Light Sail Acceleration, <a href="http://arxiv.org/pdf/1403.2709.pdf">arXiv:1403.2709</a>, <a href="http://dx.doi.org/10.1063/1.4894092">Appl. Phys. Lett., 105, 084105 (2014)</a></p>
       </section>
     </div>
 
