--- a/index.html
+++ b/index.html
@@ -33,22 +33,29 @@
       <section id="main_content" class="inner">
         <p><a href="https://travis-ci.org/ALaDyn/piccante" title="master"><img src="https://travis-ci.org/ALaDyn/piccante.png?branch=master" alt="Build Status Master"></a></p>
 
-<p><code>piccante</code> is a massively parallel fully-relativistic electromagnetic 3D particle-in-cell code, released by the authors to the whole laser-plasma community under a GPLv3 license.</p>
+<p><code>piccante</code> is a massively parallel fully-relativistic electromagnetic 3D particle-in-cell code, released by the authors to the whole laser-plasma community under a GPLv3 license.<br>
+Its strengths are related to flexibility: the user is able to define an arbitrary number of particle species with arbitrary density functions and an arbitrary number of Gaussian laser pulses.<br>
+The code is proved to run on up to 16384 MPI processes. Some preliminary scaling tests verified a very good scalability on up to 4096 MPI tasks.<br>
+In its present state, the code could be considered in <em>beta status</em>.<br>
+Copyright 2014, 2015 - Andrea Sgattoni, Luca Fedeli, Stefano Sinigardi</p>
 
-<p>Its strengths are related to flexibility: the user is able to define an arbitrary number of particle species with arbitrary density functions and an arbitrary number of Gaussian laser pulses.</p>
+<p>To build it on linux, <code>make</code>, a C++ compiler, <code>boost</code>, <code>MPI</code> and <code>gsl</code> are required, after that a plain <code>make</code> should work (adapt the makefile according to your setup if needed).<br>
+On MacOS X you should use <a href="http://brew.sh/">homebrew</a> to install the same packages and then launch <code>make brew</code>.<br>
+On Windows, you should use the Visual Studio solution to obtain <code>boost</code> as a Nuget package, while you should download <a href="http://sourceforge.net/projects/gnuwin32/files/gsl/1.8/gsl-1.8.exe">GSL for Windows</a> and <a href="https://www.microsoft.com/en-us/download/details.aspx?id=49926">Microsoft MPI (with SDK)</a> before building. After installing GSL you should also create its .lib files with this method:</p>
 
-<p>The code is proved to run on up to 16384 MPI processes. Some preliminary scaling tests verified a very good scalability on up to 4096 MPI tasks.</p>
+<pre><code>1) open the VS Command Shell as an administrator
+2) cd "c:\Program Files (x86)\GnuWin32\lib"
+3) lib /def:libgsl.def
+4) lib /def:libgslcblas.def
+</code></pre>
 
-<p>In its present state, the code could be considered in <em>beta status</em>.</p>
+<p><code>piccante</code> should build cleanly after that</p>
 
-<p>Copyright 2014, 2015 - Andrea Sgattoni, Luca Fedeli, Stefano Sinigardi</p>
-
-<p>A paper that describes the technical features of <code>piccante</code> is under development now, in the meantime if you want to use the code please ask the authors for a ZENODO doi linked to the release you're using.</p>
-
-<p>A technical paper describing optimizations performed during a Preparatory PRACE can be found <a href="http://www.prace-ri.eu/IMG/pdf/WP209.pdf">here</a> <a href="http://dx.doi.org/10.5281/zenodo.16097"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.16097.svg" alt="DOI"></a>.</p>
+<p>A paper that describes the technical features of <code>piccante</code> is under development now, in the meantime if you want to use the code please ask the authors for a ZENODO doi linked to the release you're using.<br>
+A technical paper describing optimizations performed during a Preparatory PRACE can be found <a href="http://www.prace-ri.eu/IMG/pdf/WP209.pdf">here</a> <a href="http://dx.doi.org/10.5281/zenodo.16097"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.16097.svg" alt="DOI"></a>.</p>
 
 <h3>
-<a id="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
+<a id="papers-containing-simulations-done-with-piccante" class="anchor" href="#papers-containing-simulations-done-with-piccante" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers containing simulations done with piccante</h3>
 
 <p>1) A. Sgattoni, S. Sinigardi, L. Fedeli, F. Pegoraro, A. Macchi, Laser-Driven Rayleigh-Taylor Instability: Plasmonics Effects and Three-Dimensional Structures, <a href="http://arxiv.org/pdf/1404.1260.pdf">arXiv:1404.1260</a>, <a href="http://dx.doi.org/10.1103/PhysRevE.91.013106">Phys. Rev. E, 91, 013106 (2015)</a>
 <a href="http://dx.doi.org/10.5281/zenodo.10587"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.10587.svg" alt="DOI"></a></p>
